--- a/style.css
+++ b/style.css
@@ -42,8 +42,16 @@ div.canvasflexbox {
 
 .penguin {
     display:none;
+    border: 3px solid red;
+    height: 100px;
+    width: 50px;
+    object-fit:cover;
 }
 
 .fish {
     display:none;
+    border: 3px solid red;
+    height: 50px;
+    width: 100px;
+    object-fit:cover;
 }
