--- a/style.css
+++ b/style.css
@@ -96,3 +96,11 @@ div.pausemenu {
     width: 100px;
     object-fit: cover;
 }
+
+.shark {
+    display: none;
+    border: 3px solid red;
+    height: 50px;
+    width: 100px;
+    object-fit: cover;
+}
