--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ html {
     margin: 0;
 }
 
+h1 {
+    color:white;
+}
+
+h2 {
+    color: white;
+}
+
 body {
     margin: 0;
     width: 100vw;
@@ -55,10 +63,10 @@ div.pausemenu {
 
 .pausebutton {
     color: white;
-    background-color: rgb(41, 41, 41);
-    border: 3px solid black;
+    background-color: rgb(70, 70, 70);
+    border: 3px solid white;
     border-radius: 5px;
-    font-size: 140%;
+    font-size: 170%;
     padding: 10px;
 }
 
@@ -103,4 +111,8 @@ div.pausemenu {
     height: 50px;
     width: 100px;
     object-fit: cover;
+}
+
+div.sources {
+    font-size: 0.5em;
 }
